--- a/fetch_artists/index.html
+++ b/fetch_artists/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="resources/bootstrap/dist/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Ubuntu&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="resources/css/style.css">
     <script src="resources/jquery/jquery.min.js" defer></script>
